# power-bi-agentic-development

./: .gitignore  ATTRIBUTIONS.md  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
plugins/agentic-help/.claude-plugin/: plugin.json
plugins/custom-visuals/: .mcp.json
plugins/custom-visuals/.claude-plugin/: plugin.json
plugins/etl/.claude-plugin/: plugin.json
plugins/fabric-admin/.claude-plugin/: plugin.json
plugins/fabric-cli/: .mcp.json
plugins/fabric-cli/.claude-plugin/: plugin.json
plugins/fabric-cli/commands/: audit-context.md  migrating-fabric-trial-capacities.md
plugins/goblin-mode/.claude-plugin/: plugin.json
plugins/paginated-reports/.claude-plugin/: plugin.json
release-notes/: v0.10.1.md  v0.11.0.md  v0.18.0.md  v0.8.4.md  v26.24.md  v26.25.md  v26.26.1.md  v26.26.2.md  v26.28.md  v26.29.md  v26.30.0.md
release-notes/previous-releases/: 0.18.1.md  v0.12.0.md  v0.14.1.md  v26.24.md  v26.26.md  v26.28.md  v26.29.1.md
scripts/: sync-te-cli-skill.sh
skills/bpa-rules/: SKILL.md
skills/c-sharp-macros/: SKILL.md
skills/c-sharp-scripting/: SKILL.md
skills/connect-pbid/: SKILL.md
skills/tabular-editor-cli/: SKILL.md
skills/tabular-editor-config/: SKILL.md
skills/te-docs/: SKILL.md
tools/pbiad/: Cargo.toml  DESIGN.md  README.md
tools/pbiad/src/: agents.rs  cli.rs  config.rs  detect.rs  install.rs  inventory.rs  main.rs  memory.rs  recommend.rs  registry.rs  source.rs  statusline.rs  theme.rs  util.rs
useful-stuff/: README.md
useful-stuff/status-lines/: README.md  statusline-click.sh  statusline.sh
(+227 files in other folders)
