[package]
name = "pbiad"
version = "0.1.0"
edition = "2021"
description = "Installer and recommender for Power BI agentic development skills, hooks, and subagents."
license = "GPL-3.0"
repository = "https://github.com/data-goblin/power-bi-agentic-development"

[features]
default = []
plugins = []

[[bin]]
name = "pbiad"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cliclack = "0.5"
console = "0.16"
directories = "6"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2"
which = "6"

[dev-dependencies]
tempfile = "3"
